Fix animation on iphone and adaptive layout metal-cad

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -276,7 +276,7 @@ select.role-select {
     height: 100%;
     background-color: var(--var-main-color);
     z-index: 9999;
-    animation: fillAnimation 0.3s forwards;
+    animation: fillAnimation .3s forwards;
 }
 
 @keyframes fillAnimation {
