--- a/css/metal-cad.css
+++ b/css/metal-cad.css
@@ -85,6 +85,7 @@ button#mobile-add{
     font-weight: 700;
     font-size: 14px;
     padding-bottom: 38px;
+    padding-top: 5px;
 }
 
 .wrapper>.layout>.content>.slide-list>.slide>.status{
@@ -230,6 +231,7 @@ div#modal>form{
     border-radius: 33px;
     box-shadow: 0px 10px 78px 3px rgba(0, 0, 0, 0.1);
     display: grid;
+    width: 40vw;
 }
 
 div#modal>form>.modal-title{
@@ -336,6 +338,21 @@ div#modal>form>button.close:active{
     }
 }
 
+@media (max-width: 1299px){
+    .wrapper>.layout>.content>.table>table>thead>tr>th#table-plan{
+        display: none;
+    }
+    .wrapper>.layout>.content>.table>table>thead>tr>th#table-fact{
+        display: none;
+    }
+    .wrapper>.layout>.content>.table>table>tbody>tr>td#table-fact-value{
+        display: none;
+    }
+    .wrapper>.layout>.content>.table>table>tbody>tr>td#table-plan-value{
+        display: none;
+    }
+}
+
 @media (max-width: 529px){
     .wrapper>.layout>.content>.slide-list{
         grid-template-columns: repeat(1, 1fr);
@@ -358,5 +375,62 @@ div#modal>form>button.close:active{
     .wrapper>.layout>.content>.content-header>button#mobile-add{
         display: block;
         padding: 15px;
+    }
+}
+
+@media (max-width: 1160px){
+    .wrapper>.layout>.content>.table>table>thead>tr>th#table-num{
+        display: none;
+    }
+    .wrapper>.layout>.content>.table>table>thead>tr>th#table-date{
+        display: none;
+    }
+    .wrapper>.layout>.content>.table>table>tbody>tr>td#table-num-value{
+        display: none;
+    }
+    .wrapper>.layout>.content>.table>table>tbody>tr>td#table-date-value{
+        display: none;
+    }
+}
+
+@media (max-width: 786px){
+    .wrapper>.layout>.content>.table>table>thead>tr>th#table-responseble{
+        display: none;
+    }
+    .wrapper>.layout>.content>.table>table>tbody>tr>td#table-responseble-value{
+        display: none;
+    }
+}
+
+@media (max-width: 425px){
+    .wrapper>.layout>.content>.table>table>thead>tr>th#table-status{
+        display: none;
+    }
+    .wrapper>.layout>.content>.table>table>tbody>tr>td#table-status-value{
+        display: none;
+    }
+}
+
+@media (max-width: 1299px){
+    div#modal>form{
+        width: 50vw;
+    }
+}
+
+@media (max-width: 1024px){
+    div#modal>form{
+        width: 60vw;
+    }
+}
+
+@media (max-width: 768px){
+    div#modal>form{
+        width: 80vw;
+    }
+}
+
+@media (max-width: 425px){
+    div#modal>form{
+        width: 90vw;
     }
 }
